# ChangeLog for app-text/jing
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/jing/ChangeLog,v 1.15 2006/12/03 17:28:49 nichoj Exp $

*jing-20030619-r2 (03 Dec 2006)

  03 Dec 2006; Joshua Nichols <nichoj@gentoo.org> files/build.xml,
  +jing-20030619-r2.ebuild:
  Revision bump to support new Java system. No longer uses bundled source from
  relaxng-datatype.

  22 Jan 2006; Joshua Nichols <nichoj@gentoo.org>
  +files/jing-20030619-xerces.patch, jing-20030619-r1.ebuild:
  Added patch to fix compilation with xerces-2.7 to fix bug #119366.

  12 Jul 2005; Thomas Matthijs <axxo@gentoo.org> jing-20030619-r1.ebuild:
  Style/Dep fixes

  12 May 2005; Jan Brinkmann <luckyduck@gentoo.org> jing-20030619-r1.ebuild:
  stable on amd64, added ~ppc to KEYWORDS

  17 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> jing-20030619-r1.ebuild:
  fixed dependency problem. fixes bug #78312.

  14 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> jing-20030619-r1.ebuild,
  -jing-20030619.ebuild:
  marked -r1 stable on x86 and removed the old version which uses packed jars.

  14 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> jing-20030619.ebuild:
  correct java-config calls in the startup script. fixes bug #77912.

*jing-20030619-r1 (14 Nov 2004)

  14 Nov 2004; Thomas Matthijs <axxo@gentoo.org> +files/build-patch.diff,
  +files/build.xml, +files/manifest.mf, +jing-20030619-r1.ebuild:
  build from source 63240, submitted by Jan Brinkmann <lucky@the-luckyduck.de>

  03 Nov 2004; Thomas Matthijs <axxo@gentoo.org> jing-20030619.ebuild:
  depend on app-arch/unzip

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> jing-20030619.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

  23 Aug 2004; Chris Aniszczyk <zx@gentoo.org> jing-20030619.ebuild:
  Marking stable on x86

  01 Aug 2004; Michael Sterrett <mr_bones_@gentoo.org> jing-20030619.ebuild: