@@ -1,7 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX build-patch.diff 1484 RMD160 9ac2189c6912e8a3c34c11158892fd5d3a8e39ad SHA1 a822c082fe33577c6892d2c5a0f6d3dc4064058c SHA256 607242a630782389560aa387e83ba5074d28bd19c406417178abe63593934b4c
 MD5 4e01494f4274dfe8fbed0b4982405537 files/build-patch.diff 1484
 RMD160 9ac2189c6912e8a3c34c11158892fd5d3a8e39ad files/build-patch.diff 1484
 SHA256 607242a630782389560aa387e83ba5074d28bd19c406417178abe63593934b4c files/build-patch.diff 1484
+AUX build-r1.xml 729 RMD160 f8536b948ed2a455210efe49f082b6211fbe1103 SHA1 3b9d27f9de01289677cbb82f6dd3616b6d39e914 SHA256 975c3f35bbac14f17382bdee9af3ece86b4794383ab45e28c33c298ee3f71302
+MD5 4cd09a7f9afa5952e374b40d102b5cf6 files/build-r1.xml 729
+RMD160 f8536b948ed2a455210efe49f082b6211fbe1103 files/build-r1.xml 729
+SHA256 975c3f35bbac14f17382bdee9af3ece86b4794383ab45e28c33c298ee3f71302 files/build-r1.xml 729
 AUX build.xml 679 RMD160 6b488e228223877b607ad96d110f879308b06572 SHA1 446f71e2f6a2b8e87bb7d8be87f00a74beebc402 SHA256 b067af1369b3aa9b3fe4bf2288c66aa2e3742f712e37a9717ad4f6c4ad1d3ce1
 MD5 c5dfe0fdf4d9802d54ae83d3a3d6297b files/build.xml 679
 RMD160 6b488e228223877b607ad96d110f879308b06572 files/build.xml 679
@@ -23,10 +30,14 @@ EBUILD jing-20030619-r2.ebuild 1375 RMD160 9263b109384f5dd14d259fcc66b90e4636396
 MD5 0ec111af75ea00ebdd9a9aa5d3d7e8cb jing-20030619-r2.ebuild 1375
 RMD160 9263b109384f5dd14d259fcc66b90e46363965f0 jing-20030619-r2.ebuild 1375
 SHA256 aed2bf024a77b346c3c70796962326ca523135759206b507f4845a2da3f9cc16 jing-20030619-r2.ebuild 1375
-MISC ChangeLog 2194 RMD160 55f1de1bcfde42d59aa5578c014cec4cea0f0995 SHA1 3440efb11e66f4297ec8f550f3075ec02d39cc7f SHA256 5a1434c2fd5887c7a82ceeecd3e1527265d656bb439bf31315731a0658773849
-MD5 a319e8e2fe166fdd8635a21ecee6fd45 ChangeLog 2194
-RMD160 55f1de1bcfde42d59aa5578c014cec4cea0f0995 ChangeLog 2194
-SHA256 5a1434c2fd5887c7a82ceeecd3e1527265d656bb439bf31315731a0658773849 ChangeLog 2194
+EBUILD jing-20030619-r3.ebuild 2040 RMD160 e6255cc1c0f402dd7a0d831365c620d0c5623b43 SHA1 67c4e09aa54ae3eecaabd85456ae083223c54cc8 SHA256 a76ecbae7a23f982279c60a463299ceea5ecae423919a65a2ac3e388436bed27
+MD5 c4ea4f6f353b8f9d9c77fa9fab06dec8 jing-20030619-r3.ebuild 2040
+RMD160 e6255cc1c0f402dd7a0d831365c620d0c5623b43 jing-20030619-r3.ebuild 2040
+SHA256 a76ecbae7a23f982279c60a463299ceea5ecae423919a65a2ac3e388436bed27 jing-20030619-r3.ebuild 2040
+MISC ChangeLog 2442 RMD160 fe904fdac9c9b65c8ed57c68111c1bde617770ad SHA1 3a36809848f2edcbdabed9fcb9c7f7ad50c8bc86 SHA256 7a6be2f2180bd00808f9b67d9664dfbfdde14fb348e24ca5446a24c5c288b210
+MD5 d58c93c9f5a255e028120c58ebba0919 ChangeLog 2442
+RMD160 fe904fdac9c9b65c8ed57c68111c1bde617770ad ChangeLog 2442
+SHA256 7a6be2f2180bd00808f9b67d9664dfbfdde14fb348e24ca5446a24c5c288b210 ChangeLog 2442
 MISC metadata.xml 176 RMD160 7b9811f5e25a1acb5d5bb2d9112f4b7165ecd50d SHA1 e7dded9a52a425251f7aa7127a79289fc776cbcd SHA256 54961b0f82bee2e683d1a4fdd717a964a254afad757cf4f55415b5ffd72d1424
 MD5 79a5dd1b805e5bca495aec6d6a73826b metadata.xml 176
 RMD160 7b9811f5e25a1acb5d5bb2d9112f4b7165ecd50d metadata.xml 176
@@ -37,3 +48,13 @@ SHA256 71febdf67b4677f7f6ebbe67355138425a2d4009f47aa3669e02a64c3b9cc935 files/di
 MD5 e447ff27a531845757b8d3bbc33f7a80 files/digest-jing-20030619-r2 235
 RMD160 37657388b2592ac55bc00cbfc899d40d53a08d9e files/digest-jing-20030619-r2 235
 SHA256 71febdf67b4677f7f6ebbe67355138425a2d4009f47aa3669e02a64c3b9cc935 files/digest-jing-20030619-r2 235
+MD5 e447ff27a531845757b8d3bbc33f7a80 files/digest-jing-20030619-r3 235
+RMD160 37657388b2592ac55bc00cbfc899d40d53a08d9e files/digest-jing-20030619-r3 235
+SHA256 71febdf67b4677f7f6ebbe67355138425a2d4009f47aa3669e02a64c3b9cc935 files/digest-jing-20030619-r3 235
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.1 (GNU/Linux)
+
+iD8DBQFFsnQycxLzpIGCsLQRAqgnAJwPdfq/DhOjmz8qOBfY6Ct2kTdHVACgkL2J
+TxxusgEQKH3mazNr5Fn8fao=
+=dsKV
+-----END PGP SIGNATURE-----
