@@ -1,0 +1,34 @@
+<?xml version="1.0"?>
+
+<project name="jing" default="jar">
+	<!-- compiles the sources -->
+	<target name="compile">
+		<mkdir dir="build" />
+	
+		<javac srcdir="src" 
+			destdir="build"
+			source="1.4">
+			<classpath>
+				<fileset dir="bin" includes="*.jar"/>
+			</classpath>
+		</javac>
+		
+		<!-- we need the *.properties at the correct 
+		     position in the jar archive!        -->
+		<copy todir="build">
+		<fileset dir="src">
+			<include name="**/*.properties" />
+		</fileset>
+		</copy>
+		<copy todir="build/META-INF">
+			<fileset dir="src/META-INF" />
+		</copy>
+	</target>
+
+	<!-- create the jar archive -->
+	<target name="jar" depends="compile">
+		<jar jarfile="bin/jing.jar"
+			basedir="build">
+		</jar>
+	</target>
+</project>
