@@ -1,0 +1,3 @@
+MD5 f9b0775d8740f16ab3df82ad3707a093 jing-20030619.zip 2523368
+RMD160 53ae68b42bee829f3e6da910c5a96e9910cfa430 jing-20030619.zip 2523368
+SHA256 b10a7fbbf1f5354de59700a1665f27d68a71b07f6927c2e497dc0ba294a47efd jing-20030619.zip 2523368
