@@ -1,6 +1,13 @@
 # ChangeLog for app-text/jing
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/jing/ChangeLog,v 1.15 2006/12/03 17:28:49 nichoj Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/jing/ChangeLog,v 1.16 2007/01/20 19:57:26 betelgeuse Exp $
+
+*jing-20030619-r3 (20 Jan 2007)
+
+  20 Jan 2007; Petteri Räty <betelgeuse@gentoo.org> +files/build-r1.xml,
+  +jing-20030619-r3.ebuild:
+  Fixed bug #122038, made this compile with jdks >=1.5, cleaned the ebuild and
+  added the source use flag.
 
 *jing-20030619-r2 (03 Dec 2006)
 
